--- a/.gitmodules
+++ b/.gitmodules
@@ -126,4 +126,4 @@
 	url = https://github.com/zhangslice/mm32sdk.git
 [submodule "hw/mcu/gd/nuclei-sdk"]
 	path = hw/mcu/gd/nuclei-sdk
-	url = git@github.com:Nuclei-Software/nuclei-sdk.git
+	url = https://github.com/Nuclei-Software/nuclei-sdk.git
