rename to .readthedocs.yaml
exclude all submodules for docs

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,3 +11,8 @@ python:
   version: 3.8
   install:
     - requirements: docs/requirements.txt
+
+submodules:
+  include: []
+  recursive: false
+    
