--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,7 @@ jobs:
         - 'samd51'
         - 'saml2x'
         - 'stm32f0'
+        - 'stm32f1'
         - 'stm32f4'
         - 'stm32f7'
         - 'stm32h7'
