--- a/.github/workflows/build_esp.yml
+++ b/.github/workflows/build_esp.yml
@@ -18,8 +18,7 @@ jobs:
         # ESP32-S2
         - 'espressif_saola_1'
         # ESP32-S3
-        # latest IDF does not define USB0 in linker
-        #- 'espressif_addax_1'
+        - 'espressif_addax_1'
 
     steps:
     - name: Setup Python
