--- a/examples/device/CMakeLists.txt
+++ b/examples/device/CMakeLists.txt
@@ -24,4 +24,5 @@ family_add_subdirectory(msc_dual_lun)
 family_add_subdirectory(net_lwip_webserver)
 family_add_subdirectory(uac2_headset)
 family_add_subdirectory(usbtmc)
+family_add_subdirectory(video_capture)
 family_add_subdirectory(webusb_serial)
