--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Checkout common submodules in lib
-      run: git submodule update --init lib/FreeRTOS-Kernel lib/lwip lib/sct_neopixel
+      run: git submodule update --init lib/FreeRTOS-Kernel lib/lwip lib/sct_neopixel lib/linkermap
 
     - name: Checkout pico-sdk
       if: matrix.family == 'rp2040'
@@ -94,6 +94,11 @@ jobs:
 
     - name: Build
       run: python3 tools/build_family.py ${{ matrix.family }}
+
+    - name: Linker Map
+      run: |
+        pip install lib/linkermap
+        for ex in `ls -d examples/device/*/`; do find ${ex} -name *.map -print -quit | xargs -I % sh -c 'echo %; linkermap -v %; echo "\n"'; done
 
   # ---------------------------------------
   # Build all no-family (opharned) boards
