--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,7 +100,7 @@ jobs:
         pip install lib/linkermap
         for ex in `ls -d examples/device/*/`; do \
           find ${ex} -name *.map -print -quit | \
-          xargs -I % sh -c 'echo %; linkermap %; echo "\n"'; \
+          xargs -I % sh -c 'echo "::group::%"; linkermap %; echo "::endgroup::"'; \
         done
 
   # ---------------------------------------
