--- a/.github/workflows/build_esp.yml
+++ b/.github/workflows/build_esp.yml
@@ -30,12 +30,14 @@ jobs:
     - name: Checkout TinyUSB
       uses: actions/checkout@v2
 
+    - name: Checkout common submodules in lib
+      run: git submodule update --init lib/linkermap
+
     - name: Build
       run: docker run --rm -v $PWD:/project -w /project espressif/idf:latest python3 tools/build_esp32sx.py ${{ matrix.board }}
 
     - name: Linker Map
       run: |
-        git submodule update --init lib/linkermap
         pip install lib/linkermap
         for ex in `ls -d examples/device/*/`; do \
           find ${ex} -name *.map -print -quit | \
