--- a/.github/workflows/build_esp.yml
+++ b/.github/workflows/build_esp.yml
@@ -40,6 +40,6 @@ jobs:
       run: |
         pip install lib/linkermap
         for ex in `ls -d examples/device/*/`; do \
-          find ${ex} -name *.map -print -quit | \
+          find ${ex} -maxdepth 3 -name *.map -print -quit | \
           xargs -I % sh -c 'echo "::group::%"; linkermap -v %; echo "::endgroup::"'; \
         done
