--- a/.github/workflows/build_esp.yml
+++ b/.github/workflows/build_esp.yml
@@ -30,15 +30,18 @@ jobs:
     - name: Checkout TinyUSB
       uses: actions/checkout@v2
 
-    - name: Checkout common submodules in lib
-      run: git submodule update --init lib/linkermap
+    - name: Checkout hathach/linkermap
+      uses: actions/checkout@v2
+      with:
+         repository: hathach/linkermap
+         path: linkermap
 
     - name: Build
       run: docker run --rm -v $PWD:/project -w /project espressif/idf:latest python3 tools/build_esp32sx.py ${{ matrix.board }}
 
     - name: Linker Map
       run: |
-        pip install lib/linkermap
+        pip install linkermap/
         for ex in `ls -d examples/device/*/`; do \
           find ${ex} -maxdepth 3 -name *.map -print -quit | \
           xargs -I % sh -c 'echo "::group::%"; linkermap -v %; echo "::endgroup::"'; \
