--- a/.github/workflows/build_arm.yml
+++ b/.github/workflows/build_arm.yml
@@ -57,6 +57,7 @@ jobs:
         - 'stm32f7'
         - 'stm32h7'
         - 'stm32l4'
+        - 'xmc4000'
     steps:
     - name: Setup Python
       uses: actions/setup-python@v2
