rename to simply OPT_MCU_MSP432E4, add msp432e to ci

--- a/.github/workflows/build_arm.yml
+++ b/.github/workflows/build_arm.yml
@@ -45,6 +45,7 @@ jobs:
         - 'lpc54'
         - 'lpc55'
         - 'mm32'
+        - 'msp430e4'
         - 'nrf'
         - 'rp2040'
         - 'samd11'
