--- a/examples/host/cdc_msc_hid/CMakeLists.txt
+++ b/examples/host/cdc_msc_hid/CMakeLists.txt
@@ -15,7 +15,8 @@ add_executable(${PROJECT})
 # Example source
 target_sources(${PROJECT} PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/src/hid_app.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/hid_joy.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/hid_host_utils.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/hid_host_joy.c
         ${CMAKE_CURRENT_SOURCE_DIR}/src/main.c
         ${CMAKE_CURRENT_SOURCE_DIR}/src/msc_app.c
         )
