Fix ceedling test build

--- a/test/project.yml
+++ b/test/project.yml
@@ -36,7 +36,7 @@
     - -:test/support
   :source:
     - ../src/**
-    - ../examples/**
+    - ../examples/host/cdc_msc_hid/*
   :support:
     - test/support
 
