Add CH341 example to CMakelist and rules

--- a/examples/device/CMakeLists.txt
+++ b/examples/device/CMakeLists.txt
@@ -26,3 +26,4 @@ family_add_subdirectory(uac2_headset)
 family_add_subdirectory(usbtmc)
 family_add_subdirectory(video_capture)
 family_add_subdirectory(webusb_serial)
+family_add_subdirectory(ch341_serial)
