--- a/.github/workflows/test_hardware.yml
+++ b/.github/workflows/test_hardware.yml
@@ -33,27 +33,29 @@ jobs:
         touch flash.sh
         chmod +x flash.sh
         echo > flash.sh 'openocd -f "interface/picoprobe.cfg" -f "target/rp2040.cfg" -c "program $1.elf reset exit"'
-        echo >> flash.sh 'echo "Waiting for 0.5s for reset"'
-        echo >> flash.sh 'sleep 0.5'
-        echo >> flash.sh 'SECONDS=0'
-        echo >> flash.sh 'lsusb | grep "cafe:"'
+        # echo >> flash.sh 'echo "Waiting for 0.5s for reset"'
+        # echo >> flash.sh 'sleep 0.5'
+        # echo >> flash.sh 'SECONDS=0'
+        # echo >> flash.sh 'lsusb | grep "cafe:"'
 
     - name: Test cdc_dual_ports
-      #working-directory: ${{github.workspace}}
       run: |
+        echo "Second = $SECONDS"
         ./flash.sh cdc_dual_ports
+        echo "Second = $SECONDS"
+        while (! ([ -e /dev/ttyACM1 ] && [ -e /dev/ttyACM2 ])) && [ $SECONDS -le 5 ]; do :; done
         echo $SECONDS
-        while (! ([ -e /dev/ttyACM1 ] && [ -e /dev/ttyACM2 ])) && [$SECONDS -le 5]; do :; done
         test -e /dev/ttyACM1 && echo "ttyACM1 exists"
         test -e /dev/ttyACM2 && echo "ttyACM2 exists"
 
     - name: Test cdc_msc
-      #working-directory: ${{github.workspace}}
       run: |
+        readme='/media/pi/TinyUSB MSC/README.TXT'
+        echo "Second = $SECONDS"
         ./flash.sh cdc_msc
-        echo $SECONDS
-        while (! ([ -e /dev/ttyACM1 ] && [ -e /dev/sda ])) && [$SECONDS -le 5]; do :; done
+        echo "Second = $SECONDS"
+        while (! ([ -e /dev/ttyACM1 ] && [ -f "$readme" ])) && [ $SECONDS -le 5 ]; do :; done
+        echo "Second = $SECONDS"
         test -e /dev/ttyACM1 && echo "ttyACM1 exists"
-        test -e /dev/sda && echo "sda exists"
-        test -f /media/pi/TinyUSB\ MSC/README.TXT && echo "MSC README.TXT exist"
-        cat /media/pi/TinyUSB\ MSC/README.TXT
+        test -f "$readme" && echo "$readme exists"
+        cat "$readme"
