Add motion jpeg

--- a/examples/device/video_capture/Makefile
+++ b/examples/device/video_capture/Makefile
@@ -1,6 +1,13 @@
 include ../../../tools/top.mk
 include ../../make.mk
 
+ifeq ($(DISABLE_MJPG),1)
+CFLAGS += -DCFG_EXAMPLE_VIDEO_DISABLE_MJPG
+endif
+ifeq ($(FORCE_READONLY),1)
+CFLAGS += -DCFG_EXAMPLE_VIDEO_READONLY
+endif
+
 INC += \
 	src \
 	$(TOP)/hw \
