--- a/examples/device/video_capture/Makefile
+++ b/examples/device/video_capture/Makefile
@@ -1,8 +1,8 @@
 include ../../../tools/top.mk
 include ../../make.mk
 
-ifeq ($(DISABLE_MJPG),1)
-CFLAGS += -DCFG_EXAMPLE_VIDEO_DISABLE_MJPG
+ifeq ($(DISABLE_MJPEG),1)
+CFLAGS += -DCFG_EXAMPLE_VIDEO_DISABLE_MJPEG
 endif
 ifeq ($(FORCE_READONLY),1)
 CFLAGS += -DCFG_EXAMPLE_VIDEO_READONLY
