--- a/.github/workflows/build_arm.yml
+++ b/.github/workflows/build_arm.yml
@@ -99,10 +99,10 @@ jobs:
     - name: Linker Map
       run: |
         pip install linkermap/
-        # find -quit to only print map of 1 board per example
-        for ex in `ls -d examples/*/*/`; do \
-          find ${ex} -name *.map -print -quit | \
-          xargs -I % sh -c 'echo "::group::%"; linkermap -v %; echo "::endgroup::"'; \
+        # find -quit to only print linkermap of 1 board per example
+        for ex in `ls -d examples/*/*/`
+        do
+          find ${ex} -name *.map -print -quit | xargs -I % sh -c 'echo "::group::%"; linkermap -v %; echo "::endgroup::"'
         done
 
     # Following steps are for Hardware Test with self-hosted
