use gh cli instead of action for workflow dispatch

--- a/.github/workflows/build_esp.yml
+++ b/.github/workflows/build_esp.yml
@@ -24,6 +24,8 @@ jobs:
     steps:
     - name: Setup Python
       uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
 
     - name: Pull ESP-IDF docker
       run: docker pull espressif/idf:latest
