--- a/.github/workflows/build_arm.yml
+++ b/.github/workflows/build_arm.yml
@@ -66,6 +66,8 @@ jobs:
     steps:
     - name: Setup Python
       uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
 
     - name: Install ARM GCC
       uses: carlosperate/arm-none-eabi-gcc-action@v1
@@ -121,10 +123,9 @@ jobs:
 
     - name: Trigger Hardware Test
       if: matrix.family == 'rp2040' && github.repository_owner == 'hathach'
-      uses: benc-uk/workflow-dispatch@v1
-      with:
-        workflow: Hardware Test
-        token: ${{ secrets.TRIGGER_SELF_HOSTED }}
+      env:
+        GH_TOKEN: ${{ secrets.API_TOKEN_GITHUB }}
+      run: gh workflow run test_hardware.yml -r $GITHUB_REF
             
   # ---------------------------------------
   # Build all no-family (orphaned) boards
